tests/lang/compile_fail/missing_struct_field.expo
struct User
  name: String
  age: Int
end

fn main
  u = User{age: 30}
  u.age.print()
end
